# llvm-cbe

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: main.yml
clang-plugin/: CBackend.cpp  CMakeLists.txt  CodeGenModule.patch  README.md
test/clang-plugin/: test-example.c
